<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#CCC" >

    <TextView android:id="@+id/page_title"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text="@string/page_identification"
              android:textColor="#000"
              android:textSize="30dp"
              android:gravity="center"
              android:layout_margin="5dp"/>
              
              <TextView android:id="@+id/title_separator"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:gravity="center" />



    <TextView android:id="@+id/login_text"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text="@string/login_text"
              android:textColor="#000"
              android:gravity="center"
              android:layout_margin="20dp"/>


    <EditText android:id="@+id/email"
              android:tag="email"
              android:inputType="textEmailAddress"
              android:layout_height="wrap_content"
              android:layout_width="200dp"
              android:text="@string/email_test"
              android:textColor="#000"
              android:padding="10dp"
              android:layout_marginTop="50dp"/>

    <EditText android:id="@+id/password"
              android:inputType="textPassword"
              android:layout_height="wrap_content"
              android:layout_width="200dp"
              android:text="@string/password_test"
              android:textColor="#000"
              android:padding="10dp"
              android:layout_margin="10dp"/>

    <Button android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/login"
            android:textColor="#000"
            android:padding="10dp"/>


</LinearLayout>

